updated search phrase

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 				</section>
 				<section class="hero_search">
 					<h1>Search for a Topic</h1>
-					<p>Topics may be browsed by <strong>category</strong>, <strong>tag</strong> or by <strong>name</strong>.</p>
+					<p>Browse for topics by <strong>category</strong>, <strong>tag</strong> or by <strong>name</strong>.</p>
 					{% include search.html %}
 				</section>
 			</div>
