added new categories and converted to adoc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,10 @@
 					{% include navigation.html %}
 				</section>
 				<section class="hero_search">
-					<h1>Search for a Topic</h1>
-					<p>Browse for topics by <strong>category</strong>, <strong>tag</strong> or by <strong>name</strong>.</p>
+					<h1>Search</h1>
+
+					<p>
+						Browse <strong>categories</strong> below or enter a topic <strong>name</strong> or <strong>category</strong> in the search box.</p>
 					{% include search.html %}
 				</section>
 			</div>
