--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,19 @@ layout: default
 		</ul>
 	</section>
 	<section class="topic-content">
-		<h1>{{ page.title }}</h1>
+		<h1>{{ page.title }} <br>
+			</h1>
+This page was last updated at: <strong>{{page.date | date: "%Y-%m-%d" }}</strong> <br>
+		<!-- Look the author details up from the site config. -->
+		{% assign author = site.data.authors[page.author] %}
+
+		<!-- Output author details if some exist. -->
+		{% if author %}
+		    <span>
+		        <!-- Personal Info. -->
+		        Written by <a href="{{ author.web }}" target="_blank">{{ author.name }}</a>
+		    </span>
+		{% endif %}
 
 		{% if page.type == "Video" %}
 			{% include youtube.html video_id=page.video_id %}
@@ -39,7 +51,7 @@ layout: default
 </section>
 
 {% if page.set %}
-	{% assign set_file_name = "_sets/" | append: page.set | append: ".md" %}
+	{% assign set_file_name = "_sets/" | append: page.set | append: ".adoc" %}
 	{% assign set = site.sets | where: "path", set_file_name | first %}
 	{% assign series_posts = site.posts | where: "set", page.set %}
 	<div class="topic-series">
