--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -32,6 +32,7 @@ input, label, select, textarea, table, header, footer, .categories, .listing, .s
 
 .categories a {
 	text-decoration: none;
+	color: $categories-color
 }
 
 h1,
