--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,10 +8,13 @@ $desktop: "(min-width: 900px)";
 $dark-grey: #222;
 $medium-grey: #666;
 $light-grey: #ccc;
-$header-color: #2E294E;
+$header-color: #4B4C7B;
 
 $link-color: #4A4A4A;
-$link-hover-color: #111;
+$link-hover-color: #FF5E5B;
 
 // Typeography Colors
-$strong-color: #C5D86D;
+$strong-color: #FAA916;
+$categories-color: #FAA916;
+$list-items: #00914C;
+$footer-color: #FAA916;
