--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,6 +61,8 @@ This page was last updated at: <strong>{{page.date | date: "%Y-%m-%d" }}</strong
 		{% include listings.html listings=series_posts numbered=true%}
 	</div>
 {% endif %}
+{% include related-posts.html %}
+
 {% assign related_posts = site.related_posts %}
 {% assign related_posts_size = related_posts | size %}
 {% if related_posts_size > 0 %}
